# fintrack/src/main/kotlin/transaction/TransactionType.kt
@@ -1,0 +1,7 @@
+package transaction
+
+enum class TransactionType {
+    INCOME,
+    EXPENSE,
+    INVESTMENT
+}
