# fintrack/src/main/resources/openapi/documentation.yaml
@@ -1,73 +1,85 @@
-openapi: 3.0.0
+openapi: 3.0.1
 info:
-  title: Sample Ktor API
+  title: Fintrack
   version: 1.0.0
-  description: This is a simple API documentation for the `/` endpoint built with Ktor.
+  description: Personal finances management API built with Ktor.
 servers:
   - url: "http://0.0.0.0:8080"
     description: Local development server
 paths:
-  /:
-    get:
-      summary: Retrieve an error response
-      operationId: getError
+  /transaction:
+    post:
+      summary: Save a transaction
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Transaction'
       responses:
-        '400':
-          description: Bad Request
+        '200':
+          description: Transaction saved successfully
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  title:
-                    type: string
-                    example: 'Invalid parameters'
-                  status:
-                    type: integer
-                    format: int32
-                    example: 400
-                  detail:
-                    type: string
-                    example: 'Invalid parameters informed'
-                  instance:
-                    type: string
-                    format: uri
-                    example: '/'
-                  properties:
-                    type: object
-                    additionalProperties: true
+                $ref: '#/components/schemas/Transaction'
+    get:
+      summary: Get all transactions
+      responses:
+        '200':
+          description: A list of transactions
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Transaction'
+  /transaction/{id}:
+    get:
+      summary: Get a transaction by ID
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Transaction found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Transaction'
+        '404':
+          description: Transaction not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProblemDetail'
+
 components:
   schemas:
-    ErrorResponse:
+    Transaction:
+      type: object
+      properties:
+        id:
+          type: string
+        amount:
+          type: number
+        date:
+          type: string
+          format: date-time
+        description:
+          type: string
+    ProblemDetail:
       type: object
       properties:
         title:
           type: string
-          example: 'Invalid parameters'
         status:
           type: integer
-          format: int32
-          example: 400
         detail:
           type: string
-          example: 'Invalid parameters informed'
         instance:
           type: string
           format: uri
-          example: '/'
-        properties:
-          type: object
-          additionalProperties: true
-  responses:
-    BadRequest:
-      description: Bad Request
-      content:
-        application/json:
-          schema:
-            $ref: '#/components/schemas/ErrorResponse'
-    SuccessResponse:
-      description: Successful response
-      content:
-        application/json:
-          schema:
-            $ref: '#/components/schemas/ErrorResponse'
